<resources>
    <string name="app_name">Spectacle</string>
    <string name="password_title">Senha</string>
    <string name="email_title">Email</string>
    <string name="not_registered_title"><u>Não possui cadastro?</u></string>
    <string name="login_title">Entrar</string>
    <string name="register_user_title">Cadastro de Usuário</string>
    <string name="register_title">Cadastrar</string>
    <string name="confirm_password_title">Confirmar Senha</string>
    <string name="menu_option_music"><font size="20">Músicas</font>\nEncontre suas músicas favoritas.</string>
    <string name="menu_option_movies"><font size="20">Filmes</font>\nEncontre seus filmes favoritos.</string>
    <string name="menu_what_you_want_to_do">O que deseja fazer?</string>
    <string name="my_playlist_title">Minha Playlist</string>
    <string name="hint_search_my_music_playlist">Buscar em minha Playlist…</string>
    <string name="add_new_music">Adicionar nova música</string>
    <string name="hint_search_new_music">Buscar nova música…</string>
    <string name="hint_search_new_movie">Buscar novo filme…</string>
    <string name="my_movies_title">Meus Filmes</string>
    <string name="hint_search_my_movies">Buscar em Meus Filmes…</string>
    <string name="movie_genre_action_title">Ação</string>
    <string name="movie_genre_animation_title">Animação</string>
    <string name="movie_genre_drama_title">Drama</string>
    <string name="movie_genre_science_fiction_title">Ficção Científica</string>
    <string name="add_title">Adicionar</string>
    <string name="music_already_added">A música escolhida já existe na sua playlist.</string>
    <string name="movie_already_added">O filme escolhido já existe na sua lista.</string>
    <string name="menu_settings">Configurações</string>
    <string name="menu_logout">Sair</string>
</resources>