<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_screen_default"
    tools:context=".ui.fragment.home.MenuFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        style="@style/TitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/SubtitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/menu_what_you_want_to_do"
        android:layout_margin="24dp"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintBottom_toTopOf="@+id/tvMyMusics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHalfPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMyMusics"
        style="@style/ContentText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_rounded_edit_text"
        android:drawableStart="@drawable/ic_music_library"
        android:drawablePadding="16dp"
        android:padding="16dp"
        android:text="@string/menu_option_music"
        app:layout_constraintBottom_toTopOf="@+id/glHalfPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMyMovies"
        style="@style/ContentText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp"
        android:drawableStart="@drawable/ic_movies"
        android:background="@drawable/bg_rounded_edit_text"
        android:drawablePadding="16dp"
        android:padding="16dp"
        android:text="@string/menu_option_movies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/glHalfPage" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLogout"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_margin="16dp"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMyMovies"
        app:srcCompat="@drawable/ic_logout"
        app:tint="@color/white_transparent" />

</androidx.constraintlayout.widget.ConstraintLayout>