<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.fragment.home.MyMusicPlaylistFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient_screen_default">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSearchPlaylistMusic"
            style="@style/SearchEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="16dp"
            android:hint="@string/hint_search_my_music_playlist"
            android:inputType="textAutoComplete"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivBack" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivMusicAlbumsPreview"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="16dp"
            android:elevation="8dp"
            android:padding="8dp"
            android:tint="@color/white_transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSearchPlaylistMusic"
            app:srcCompat="@drawable/ic_album" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMyMusicPlaylistTitle"
            style="@style/TitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/my_playlist_title"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivMusicAlbumsPreview" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAddNewMusic"
            style="@style/ActionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_rounded_edit_text"
            android:drawableStart="@drawable/ic_add"
            android:drawablePadding="8dp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="8dp"
            android:text="@string/add_new_music"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMyMusicPlaylistTitle" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMyMusicPlaylist"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAddNewMusic"
            tools:itemCount="20"
            tools:listitem="@layout/item_my_music" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>